Refactor CaptureOfSample and add <T extends A> case to show how to return the same generic type as the method parameter's generic type